# MaestroPolacchiniBackEnd

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-1564eccd7c593235248c26ab5a34f7b33e2c161d2233434d97910caca7bc349b.json  query-28693282f730624c9bb54519a2c652128d358a905a636bdd2693e9f6a3e63964.json  query-2c9ba160d1499398a2616a4ce62faca6353ba533c5d089f6bda8e129a19490b7.json  query-314989fb4623d4ed671caa5d1001f9278faca0c7f055717334c3c15678c7d8b9.json  query-92c1bfa0e08c8d039fb890e46a02e7fd4014b943f59323598800f4020bfa0dd8.json  query-a37c52478ae6f0262904425f215594e5430e5d8d974c75fb77ca2773dc657002.json  query-a9827fed78cbf567edeea16d861660d707bb7c54a6d2fda81704df44d1d45aa9.json  query-c5814566e7b2a298a13b9e3d2798737d1f59255ba7ed0251a28f6cd9a264a06a.json  query-c5e62c86d921567eb516ce631cbc423a9d73a15c6af41db337d4ae7352b2713b.json  query-d01c208574f27fa54cf03b8a4e4770125019f14374b2b6aeeb8020d36417dfad.json  query-d61ab7fb722db6eeb4ffac622e8ea44b8032b3acc49b1d93bd60d39305ace471.json  query-defb1162e92fb959720c74e1a60a627f52e4fdacf4e3d51e41a9107e2a437802.json  query-e46d08246729f1a2289b3693d972d9eae05c9ff7a41a7a73636c7b1747b0e4f8.json  query-f429ba0b90cff194fda45687a5232fe8a557e1090009d438507e04e0261bd11e.json  query-fa210e2b23e1eb147d5f017d174447b66dfa26e9f0f212991cd1d8d50170b1a7.json
docs/: book.toml
docs/src/: RLS_security.md  SUMMARY.md  chapter_1.md  database_schema.md
docs/src/architecture/: core_domain.md  crm_api.md  crm_domain.md  crm_logic.md  db_pools.md  dependency_injection.md  error_handling.md  middleware_security.md  modules_overview.md
locale/: en.json  pt.json
migrations/: 20250912013013_create_users_table.sql  20251118000130_create_tenancy_and_inventory_schema.sql  20251118025029_enable_row_level_security.sql  20251120015739_add_pricing_and_reservation.sql  20251124013421_create_batches.sql  20251127183008_fix_enum_purchase.sql  20251127220144_add_batch_position.sql  20251129020907_create_crm_schema.sql  20251212184418_add_global_identity_to_users.sql  20251212184511_align_customers_identity.sql  20251224125402_add_slug_to_tenants.sql  20251224142933_create_rbac_schema.sql  20251230134900_refactor_crm_flexibility.sql  20251230165257_catalog_polymorphism_and_composition.sql  20251230182149_add_financials_to_items.sql  20251230190502_create_flexible_operations.sql  20251231020852_create_financial_schema.sql  20260103195311_create_tenant_settings.sql
src/: common.rs  config.rs  db.rs  docs.rs  handlers.rs  main.rs  middleware.rs  models.rs  services.rs
src/common/: db_utils.rs  error.rs
src/config/: config.rs
src/db/: crm_repo.rs  dashboard_repo.rs  db.rs  finance_repo.rs  inventory_repo.rs  operations_repo.rs  rbac_repo.rs  settings_repo.rs  tenancy_repo.rs  user_repo.rs
src/handlers/: auth.rs  crm.rs  dashboard.rs  documents.rs  inventory.rs  operations.rs  rbac.rs  settings.rs  tenancy.rs
src/middleware/: auth.rs  i18n.rs  rbac.rs  tenancy.rs
src/models/: auth.rs  crm.rs  dashboard.rs  finance.rs  inventory.rs  operations.rs  rbac.rs  settings.rs  tenancy.rs
src/services/: auth.rs  crm_service.rs  dashboard_service.rs  document_service.rs  finance_service.rs  inventory_service.rs  operation_service.rs  rbac_service.rs  tenancy_service.rs
