[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

# O runtime assíncrono principal
tokio = { version = "1.32.0", features = ["full"] }

# O framework web
axum = "0.8.4"

#Necessário para `async fn` em traits, como no FromRequestParts
async-trait = "0.1.79"

# Para serialização e desserialização de dados (JSON)
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Toolkit SQL para interagir com o banco de dados de forma segura
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Para carregar variáveis de ambiente de um arquivo .env
dotenvy = "0.15.7"

# Para logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Hashing de Senhas
bcrypt = "0.17.1"

thiserror = "2.0.16"

# JSON Web Tokens (JWT)
jsonwebtoken = "9.3.0"

# Gerador de IDs únicos
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Manipulação de Datas
chrono = { version = "0.4.38", features = ["serde"] }

# Validação de dados de entrada
validator = { version = "0.20.0", features = ["derive"] }

anyhow = "1.0.99"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
